<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="room_array">
        <item>Salle A</item>
        <item>Salle B</item>
        <item>Salle C</item>
        <item>Salle D</item>
        <item>Salle E</item>
        <item>Salle F</item>
        <item>Salle G</item>
        <item>Auditorium</item>
        <item>Amphithéâtre</item>
    </string-array>
</resources>